--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bier-cell",
   "description": "An application which stores Beer etc data and makes it easy to manage your drink collection",
   "version": "0.0.1",
-  "author": "Ebin",
+  "author": "Jani Anttonen",
   "engines": {
     "node": "0.10.x",
     "npm": "1.4.x"
@@ -13,9 +13,18 @@
     "postinstall": "bower install --config.interactive=false"
   },
   "dependencies": {
+    "angular": "latest",
+    "angular-resource": "latest",
+    "angular-cookies": "latest",
+    "angular-mocks": "latest",
+    "angular-route": "latest",
+    "bootstrap": "latest",
+    "angular-bootstrap": "0.10.0",
+    "angular-ui-router": "#master"
     "async": "~0.9.0",
     "body-parser": "~1.9.0",
     "bower": "~1.3.8",
+    "brewerydb-node": "0.0.1",
     "chalk": "~0.5",
     "compression": "~1.2.0",
     "connect-flash": "~0.1.1",
