--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "angular-route": "latest",
     "bootstrap": "latest",
     "angular-bootstrap": "0.10.0",
-    "angular-ui-router": "#master"
+    "angular-ui-router": "#master",
     "async": "~0.9.0",
     "body-parser": "~1.9.0",
     "bower": "~1.3.8",
