--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   },
   "dependencies": {
     "angular": "latest",
-    "angular-resource": "latest",
+    "angular-bootstrap": "latest",
     "angular-cookies": "latest",
     "angular-mocks": "latest",
+    "angular-resource": "latest",
     "angular-route": "latest",
-    "bootstrap": "latest",
-    "angular-bootstrap": "0.10.0",
-    "angular-ui-router": "#master",
+    "angular-ui-router": "latest",
     "async": "~0.9.0",
     "body-parser": "~1.9.0",
+    "bootstrap": "latest",
     "bower": "~1.3.8",
     "brewerydb-node": "0.0.1",
     "chalk": "~0.5",
@@ -49,6 +49,7 @@
     "passport-linkedin": "~0.1.3",
     "passport-local": "~1.0.0",
     "passport-twitter": "~1.0.2",
+    "ratebeer-api": "0.0.2",
     "socket.io": "^1.2.1",
     "swig": "~1.4.1"
   },
