--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-sanitize": "~1.2",
     "angular-bootstrap": "~0.11.2",
     "angular-ui-utils": "~0.1.1",
-    "angular-ui-router": "~0.2.11"
+    "angular-ui-router": "~0.2.11",
+    "angular-material": "~0.8.3"
   },
   "resolutions": {
     "angular": ">= 1.0.8",
